# my_todo

./: .gitignore  LICENSE  README.md  desktop.html  index.html  package-lock.json  package.json  vite.config.ts  设计规范.md  需求文档.md
.github/workflows/: release.yml
docs/: CNAME  index.html  main.js  styles.css
scripts/: gen-icons.mjs
src/: App.vue  api.ts  desktop.ts  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  storage.rs  tray.rs
src-tauri/src/desktop/: mod.rs
src/components/: AboutPanel.vue  DesktopLayer.vue  SettingsPanel.vue  TasksPanel.vue  TitleBar.vue  TodoItem.vue
src/styles/: tokens.css
